--- a/www/index.html
+++ b/www/index.html
@@ -13,18 +13,18 @@
 <!--razorflow 图表-->
 
 
-  <link rel="stylesheet" type="text/css" href="templates/razorflow/files/css/razorflow.min.css">
+ <!-- <link rel="stylesheet" type="text/css" href="templates/razorflow/files/css/razorflow.min.css">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <script type="text/javascript" src="templates/razorflow/files/js/jquery.min.js"></script>
     <script type="text/javascript" src="templates/razorflow/files/js/razorflow.min.js"></script>
     <script type="text/javascript" src="templates/razorflow/files/js/razorflow.devtools.min.js"></script>
-
+-->
 <!--D3图表-->
 
-  <script type="text/javascript" src="templates/d3/d3.min.js"></script>
+ <!-- <script type="text/javascript" src="templates/d3/d3.min.js"></script>
 <script src="templates/angular_and_d3-master/step1/lib/d3.js"></script>
       <script src="templates/angular_and_d3-master/step1/lib/gauge.js"></script>
-      <script src="templates/angular_and_d3-master/step1/custom/gauges.js"></script>
+      <script src="templates/angular_and_d3-master/step1/custom/gauges.js"></script>-->
 
 
 <!--highcharts 图表-->
